--- a/src/app/features/transaction-details/transaction-details.component.html
+++ b/src/app/features/transaction-details/transaction-details.component.html
@@ -13,15 +13,15 @@
       </div>
       </div>
     </div>
-
-    <div class="col-xs-12 col-md-12 pb-3 mt-5" *ngIf="tdpImages.length > 0">
+    <div class="col-12 col-md-12 pb-3 ml-0 pt-md-4 pl-md-4 pr-md-4" style="background-color: white;">
+    <div class="col-xs-12 col-md-12 pb-3 mt-3" *ngIf="txnItem.images">
       <div class="row mt-2">
         <div class="col-12">
           <div style="text-align:center;">
             <owl-carousel-o [options]="customOptions">
-              <ng-template carouselSlide *ngFor="let image of tdpImages">
-                <div style="height: 200px;">
-                  <img style="width: auto; max-height: 100%; object-fit: contain;" [src]="image.image" />
+              <ng-template carouselSlide *ngFor="let imageData of txnItem.images">
+                <div>
+                  <img class="img-thumbnail" style="background: none; border: none; width:100%;height: 300px; object-fit: contain;" [src]="imageData[0].image" />
                 </div>
               </ng-template>
             </owl-carousel-o>
