--- a/src/app/features/transaction-details/transaction-details.component.html
+++ b/src/app/features/transaction-details/transaction-details.component.html
@@ -21,7 +21,7 @@
             <owl-carousel-o [options]="customOptions">
               <ng-template carouselSlide *ngFor="let imageData of txnItem.images">
                 <div>
-                  <img class="img-thumbnail" style="background: none; border: none; width:100%;height: 300px; object-fit: contain;" [src]="imageData[0].image" />
+                  <img class="img-thumbnail" style="background: none; border: none; width:100%;height: 300px; object-fit: contain;" [src]="imageData.image" />
                 </div>
               </ng-template>
             </owl-carousel-o>
