--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -139,7 +139,7 @@
           <div class="float-none"></div>
         </div>
       </div>
-      <div 
+      <!-- <div 
         *ngFor="let item of tracifiedCoreData.data | keyvalue">
         <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf="!isContainImage(item.value)">
         <div class="col-sm-12 col-md-3  col-lg-3  pl-md-4  pt-3 pt-md-0 trasactionDataMobileResponsive" style="font-size: 18px; font-weight:500;">
@@ -163,7 +163,7 @@
         </div>
         </div>
       </div>
-      </div>
+      </div> -->
       <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='transactionData.Txnhash'>
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Transaction Hash
