TRAC-4933 POG language json update

--- a/src/app/features/proof-verification/components/bot-segments/bot-segments.component.html
+++ b/src/app/features/proof-verification/components/bot-segments/bot-segments.component.html
@@ -27,7 +27,7 @@
                   stepper.NO
                 }}</span>
                 <span class="bs-stepper-label cs-stepper-label">{{
-                  stepper.Name
+                  stepper.Name[lang]
                 }}</span>
               </div>
             </div>
@@ -69,7 +69,7 @@
                   >{{ SegmentNumber }}.{{ index + 1 }}</span
                 >
                 <span class="bs-stepper-label cs-stepper-label">{{
-                  subStepper.ActionName
+                  subStepper.ActionName[lang]
                 }}</span>
               </div>
             </div>
