TRAC-6213 change txn view and adding bot to tillit

--- a/src/app/features/proofs/poe/proof-poe.component.css
+++ b/src/app/features/proofs/poe/proof-poe.component.css
@@ -111,3 +111,15 @@
 .clickableAwesomeFont:hover{
   color:blue !important;
 }
+
+@media (min-width: 576px) {
+  .flex-container {
+    justify-content: flex-end;
+  }
+}
+
+@media (max-width: 575.98px) {
+  .flex-container {
+    justify-content: center;
+  }
+}
