--- a/src/app/features/transaction-details/transaction-details.component.html
+++ b/src/app/features/transaction-details/transaction-details.component.html
@@ -57,8 +57,8 @@
             <div class="text-md-left text-center pl-md-1 mr-2" style="font-weight: 600;color:#818E94; float: left;"
               *ngFor="let proof of txnItem.availableProofs">
               <a href="#" onclick="return false;"><span (click)="navigateToProof(proof)"
-                  class="pl-3 pr-3 pt-2 pb-2 badge badge-pill badge-primary"
-                  style="font-size: 14px;background-color: #F3F1FF;color:#818E94;font-weight: 700;">{{proof | uppercase}}</span>
+                  class="pl-3 pr-3 pt-2 pb-2 badge badge-primary"
+                  style="font-size: 14px;background-color:#3182BD;color:#FFFFFF;font-weight: 500;">{{addProofName(proof) | uppercase}}</span>
               </a>
             </div>
             <div style="float: none;"></div>
