TRAC-7531 style change in proofbot view button

--- a/src/app/features/proofs/pog/proof-pog.component.html
+++ b/src/app/features/proofs/pog/proof-pog.component.html
@@ -13,7 +13,7 @@
             style="font-size: 30px;"></i></span></div>
         <div>
           <h4>PROOF OF GENESIS (POG)</h4>
-          <p>Proof of initialization of a traceability item</p>
+          <p style="font-size: 13px;">Proof of initialization of a traceability item</p>
         </div>
       </div>
   </div>
@@ -23,14 +23,14 @@
         <a [href]="proofbotDomain + '/?type=pog&txn=' + txnId" target="_blank">
           <span
             class="pl-3 pr-3 pt-2 pb-2 badge badge-primary"
-            style="font-size: 14px;background-color:#3182BD;color:#FFFFFF;font-weight: 500; line-height: 16.41px; margin-bottom: 0.3rem;">
+            style="width:175px;font-size: 14px;background-color:#3182BD;color:#FFFFFF;font-weight: 500; line-height: 16.41px; margin-bottom: 0.3rem;">
             {{"Verify Proof"}}
           </span>
         </a>
       </div>
     </div>
     <div class="row flex-container">
-      <div class="mr-3"><p style="font-size: 12px;">Powered by Tracified ProofBot</p></div>
+      <div class="mr-3"><p style="font-size: 13px;">Powered by Tracified ProofBot</p></div>
     </div>
   </div>
 </div>
