--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -65,7 +65,7 @@
                 style="font-size: 30px;"></i></span></div>
           <div>
             <h4>PROOF OF EXISTENCE (POE)</h4>
-            <p style="font-size: 12px;">Proof that a given data packet existed in the blockchain</p>
+            <p style="font-size: 13px;">Proof that a given data packet existed in the blockchain</p>
           </div>
         </div>
       </div>
@@ -73,16 +73,16 @@
         <div class="row  flex-container">
           <div class="mr-3">
             <a [href]="proofbotDomain + '/?type=poe&txn=' + tdpId" target="_blank">
-              <span (click)="navigateToProof(proof)"
+              <span
                 class="pl-3 pr-3 pt-2 pb-2 badge badge-primary"
-                style="font-size: 14px;background-color:#3182BD;color:#FFFFFF;font-weight: 500; line-height: 16.41px; margin-bottom: 0.3rem;">
+                style="width:175px;font-size: 14px;background-color:#3182BD;color:#FFFFFF;font-weight: 500; line-height: 16.41px; margin-bottom: 0.3rem;">
                 {{"Verify Proof"}}
               </span>
             </a>
           </div>
         </div>
         <div class="row flex-container">
-          <div class="mr-3"><p style="font-size: 12px;">Powered by Tracified ProofBot</p></div>
+          <div class="mr-3"><p style="font-size: 13px;">Powered by Tracified ProofBot</p></div>
         </div>
       </div>
     </div>
