TRAC-7531 bot button style change

--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -73,9 +73,9 @@
           <div class="mr-3">
             <a [href]="proofbotDomain + '/?type=poe&txn=' + botHash" target="_blank">
               <span
-                class="pl-3 pr-3 pt-2 pb-2 badge badge-primary"
-                style="width:175px;font-size: 14px;background-color:#3182BD;color:#FFFFFF;font-weight: 500; line-height: 16.41px; margin-bottom: 0.3rem;">
-                {{"Verify Proof"}}
+                class="pl-3 pr-3 pt-1 pb-1 badge badge-primary"
+                style="width:175px;font-size: 14px;background-color:#3182BD;color:#FFFFFF;font-weight: 500; line-height: 23.41px; margin-bottom: 0.3rem;">
+                {{"Verify Proof"}}<img src="../../../../assets/img/botWhiteLogo.svg" width="30" height="22">
               </span>
             </a>
           </div>
