TRAC-7907-Getting the response for POAC in Tillit

--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -78,6 +78,7 @@
               <i class="fas ml-5 {{ hashesMatch ? 'fa-check-circle status-text-matched' : 'fa-times-circle status-text-not-matched'}} "
                 style="font-size: 18px;"></i>
             </h2>
+            <h5 style="color: green;">{{this.poacstatus}}</h5>
           </div>
         </div>
       </div>
