TRAC-8261 changing the text in view proof button

--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -75,13 +75,13 @@
               <span
                 class="pl-3 pr-3 pt-1 pb-1 badge badge-primary"
                 style="width:175px;font-size: 14px;background-color:#3182BD;color:#FFFFFF;font-weight: 500; line-height: 23.41px; margin-bottom: 0.3rem;">
-                {{"Verify Proof"}}<img src="../../../../assets/img/botWhiteLogo.svg" width="30" height="22">
+                {{"Verify the Proof"}}<img src="../../../../assets/img/botWhiteLogo.svg" width="30" height="22">
               </span>
             </a>
           </div>
         </div>
         <div class="row flex-container">
-          <div class="mr-3"><p style="font-size: 13px;">Powered by Tracified ProofBot</p></div>
+          <div class="mr-3"><p style="font-size: 13px;">View the detailed proof in an automatic blockchain auditor</p></div>
         </div>
       </div>
     </div>
@@ -97,6 +97,7 @@
             </h2>
             <h5 style="color: green;">{{this.poacstatus}}</h5>
           </div>
+        </div>
         </div>
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-3 align-self-center text-center">
           <button type="button" class="btn btn-outline-primary" (click)="isCollapsed = !isCollapsed"
