--- a/src/app/features/proofs/pog/proof-pog.component.html
+++ b/src/app/features/proofs/pog/proof-pog.component.html
@@ -24,13 +24,13 @@
           <span
             class="pl-3 pr-3 pt-1 pb-1 badge badge-primary"
             style="width:175px;font-size: 14px;background-color:#3182BD;color:#FFFFFF;font-weight: 500; line-height: 23.41px; margin-bottom: 0.3rem;">
-            {{"Verify Proof"}}<img src="../../../../assets/img/botWhiteLogo.svg" width="30" height="22"> <span ></span>
+            {{"Verify the Proof"}}<img src="../../../../assets/img/botWhiteLogo.svg" width="30" height="22"> <span ></span>
           </span>
         </a>
       </div>
     </div>
     <div class="row flex-container">
-      <div class="mr-3"><p style="font-size: 13px;">Powered by Tracified ProofBot</p></div>
+      <div class="mr-3"><p style="font-size: 13px;">View the detailed proof in an automatic blockchain auditor</p></div>
     </div>
   </div>
 </div>
