--- a/src/app/features/search-page/card/card.component.html
+++ b/src/app/features/search-page/card/card.component.html
@@ -119,7 +119,7 @@
         <div class="row  justify-content-end viewButton">
 
           <a [routerLink]="['/txn', transactionData.txnHash]"
-            class="btn btn-main btn-view btn-outline-primary btnFixSize">View Item</a>
+            class="btn btn-main btn-view btn-outline-primary btnFixSize">Transaction Details</a>
 
         </div>
 
